--- a/tic-tac-toe-rl/q_learning.ipynb
+++ b/tic-tac-toe-rl/q_learning.ipynb
@@ -22,19 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f8567a5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tic_tac_toe import Board, new_board, transition, next_marker_to_place, game_state, pretty_format, available_plays, GameState\n",
+    "from tic_tac_toe import Board, new_board, transition, next_marker_to_place, game_state, pretty_format, available_plays, GameState, Marker\n",
     "from egocentric import EgocentricBoard, EgocentricMarker, canonicalize, remap_to_egocentric_board\n",
-    "from random import random, seed, choice"
+    "from random import random, seed, choice\n",
+    "from itertools import cycle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "1f560696",
    "metadata": {},
    "outputs": [],
@@ -43,13 +44,13 @@
     "\n",
     "class QLearner:\n",
     "    def __init__(self):\n",
-    "        self._canonical_q_table: QTable\n",
-    "        self._q_table: QTable\n",
+    "        self._canonical_q_table: QTable = {}\n",
+    "        self._q_table: QTable = {}\n",
     "\n",
     "    def serialize_state_action(self, state: Board, action: int) -> tuple[str, str]:\n",
     "        \"\"\"Returns the serialized canonical state action pair and the serialized state action pair\"\"\"\n",
     "        def _serialize_state_action(ego_state: EgocentricBoard, action: int):\n",
-    "            return \"\".join([str(m) for m in ego_state] + str(action))\n",
+    "            return \"\".join([str(m) for m in ego_state] + [str(action)])\n",
     "\n",
     "        ego_state: EgocentricBoard = remap_to_egocentric_board(state)\n",
     "        canonical_state: EgocentricBoard = canonicalize(ego_state)\n",
@@ -96,7 +97,7 @@
     "\n",
     "        next_transition_qs: list[float] = []\n",
     "        for action_next in available_plays(state_t_next):\n",
-    "            canonical_state_action_t_next, _ = self.serialize_state_action(transition(board=state_t_next, idx=action_next))\n",
+    "            canonical_state_action_t_next, _ = self.serialize_state_action(state=transition(board=state_t_next, idx=action_next), action=action_next)\n",
     "            next_transition_qs.append(self._canonical_q_table[canonical_state_action_t_next])\n",
     "\n",
     "        # TODO: consider randomly selecting from ties\n",
@@ -114,18 +115,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "id": "6e8a3fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reward_from_board_transition(board: Board) -> float:\n",
+    "    # NOTE: if next marker is second player, then first player just played\n",
+    "    first_player: bool = next_marker_to_place(board) == Marker.SECOND_PLAYER\n",
+    "    outcome = game_state(board)\n",
+    "    if outcome == GameState.FIRST_PLAYER_WON:\n",
+    "        return 1.0 if first_player else -1.0\n",
+    "    if outcome == GameState.SECOND_PLAYER_WON:\n",
+    "        return -1.0 if first_player else 1.0\n",
+    "    return 0.0\n",
+    "\n",
+    "def rollout_self_play(q_learner: QLearner, epsilon: float, learning_rate: float):\n",
+    "    board: Board = new_board()\n",
+    "    while True:\n",
+    "        action = q_learner.get_action(state_t=board, epsilon=epsilon)\n",
+    "        next_board = transition(board, action)\n",
+    "        q_learner.update(\n",
+    "            state_t=board,\n",
+    "            reward=reward_from_board_transition(board=next_board),\n",
+    "            action=action,\n",
+    "            state_t_next=next_board,\n",
+    "            learning_rate=learning_rate\n",
+    "        )\n",
+    "        board = next_board\n",
+    "        if game_state(board) != GameState.INCOMPLETE:\n",
+    "            # terminal\n",
+    "            break\n",
+    "    return game_state(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "306b6d1e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "seed(42)\n",
     "q_learner = QLearner()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "e9272820",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode 0: GameState.FIRST_PLAYER_WON\n",
+      "episode 1: GameState.FIRST_PLAYER_WON\n",
+      "episode 2: GameState.FIRST_PLAYER_WON\n",
+      "episode 3: GameState.FIRST_PLAYER_WON\n",
+      "episode 4: GameState.FIRST_PLAYER_WON\n",
+      "episode 5: GameState.FIRST_PLAYER_WON\n",
+      "episode 6: GameState.TIED\n",
+      "episode 7: GameState.SECOND_PLAYER_WON\n",
+      "episode 8: GameState.FIRST_PLAYER_WON\n",
+      "episode 9: GameState.FIRST_PLAYER_WON\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    outcome = rollout_self_play(q_learner=q_learner, epsilon=0.1, learning_rate=0.05)\n",
+    "    print(f\"episode {i}: {outcome}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6e8a3fd9",
+   "id": "9c2687f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c57538",
    "metadata": {},
    "outputs": [],
    "source": []
