looks like it is working

--- a/tic-tac-toe-rl/q_learning.ipynb
+++ b/tic-tac-toe-rl/q_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "6262bf0f",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "f8567a5e",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
     "from tic_tac_toe import Board, new_board, transition, next_marker_to_place, game_state, pretty_format, available_plays, GameState, Marker\n",
     "from egocentric import EgocentricBoard, EgocentricMarker, canonicalize, remap_to_egocentric_board\n",
     "from random import random, seed, choice\n",
-    "from itertools import cycle"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "id": "1f560696",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "id": "6e8a3fd9",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
+   "id": "a6e7b7f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q_learner_play(q_learner: QLearner, state_t: Board, epsilon: float, learning_rate: float) -> Board:\n",
+    "    action = q_learner.get_action(state_t=state_t, epsilon=epsilon)\n",
+    "    next_board = transition(state_t, action)\n",
+    "    q_learner.update(\n",
+    "        state_t=state_t,\n",
+    "        reward=reward_from_board_transition(board=next_board),\n",
+    "        action=action,\n",
+    "        state_t_next=next_board,\n",
+    "        learning_rate=learning_rate\n",
+    "        )\n",
+    "    return next_board\n",
+    "\n",
+    "def random_agent_play(state_t: Board) -> Board:\n",
+    "    return transition(board=state_t, idx=choice(available_plays(state_t)))\n",
+    "\n",
+    "def rollout_random_opponent(\n",
+    "    q_learner: QLearner,\n",
+    "    epsilon: float,\n",
+    "    learning_rate: float,\n",
+    "    agent_is_first_player: bool\n",
+    "):\n",
+    "    board: Board = new_board()\n",
+    "    while True:\n",
+    "        if next_marker_to_place(board) == Marker.FIRST_PLAYER:\n",
+    "            board = (\n",
+    "                q_learner_play(\n",
+    "                    q_learner=q_learner,\n",
+    "                    state_t=board,\n",
+    "                    epsilon=epsilon,\n",
+    "                    learning_rate=learning_rate\n",
+    "                ) if agent_is_first_player else random_agent_play(state_t=board)\n",
+    "            )\n",
+    "        else:\n",
+    "            board = (\n",
+    "                q_learner_play(\n",
+    "                    q_learner=q_learner,\n",
+    "                    state_t=board,\n",
+    "                    epsilon=epsilon,\n",
+    "                    learning_rate=learning_rate\n",
+    "                ) if not agent_is_first_player else random_agent_play(state_t=board)\n",
+    "            )\n",
+    "        if game_state(board) != GameState.INCOMPLETE:\n",
+    "            # terminal\n",
+    "            break\n",
+    "    return game_state(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "306b6d1e",
    "metadata": {},
    "outputs": [],
@@ -162,31 +216,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "id": "e9272820",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3000000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3000000/3000000 [09:02<00:00, 5530.41it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode 0: GameState.FIRST_PLAYER_WON\n",
-      "episode 1: GameState.FIRST_PLAYER_WON\n",
-      "episode 2: GameState.FIRST_PLAYER_WON\n",
-      "episode 3: GameState.FIRST_PLAYER_WON\n",
-      "episode 4: GameState.FIRST_PLAYER_WON\n",
-      "episode 5: GameState.FIRST_PLAYER_WON\n",
-      "episode 6: GameState.TIED\n",
-      "episode 7: GameState.SECOND_PLAYER_WON\n",
-      "episode 8: GameState.FIRST_PLAYER_WON\n",
-      "episode 9: GameState.FIRST_PLAYER_WON\n"
+      "{<GameState.FIRST_PLAYER_WON: 1>: 1857015, <GameState.SECOND_PLAYER_WON: 2>: 911302, <GameState.TIED: 3>: 231683}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
+    "outcomes = {GameState.FIRST_PLAYER_WON: 0, GameState.SECOND_PLAYER_WON: 0, GameState.TIED: 0}\n",
+    "\n",
+    "for _ in tqdm(range(3000000)):\n",
     "    outcome = rollout_self_play(q_learner=q_learner, epsilon=0.1, learning_rate=0.05)\n",
-    "    print(f\"episode {i}: {outcome}\")"
+    "    outcomes[outcome] += 1\n",
+    "\n",
+    "print(outcomes)"
    ]
   },
   {
@@ -194,13 +264,142 @@
    "execution_count": null,
    "id": "9c2687f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/300000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 300000/300000 [00:31<00:00, 9432.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<GameState.FIRST_PLAYER_WON: 1>: 211602, <GameState.SECOND_PLAYER_WON: 2>: 37338, <GameState.TIED: 3>: 51060}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# q learner is first player\n",
+    "\n",
+    "outcomes = {GameState.FIRST_PLAYER_WON: 0, GameState.SECOND_PLAYER_WON: 0, GameState.TIED: 0}\n",
+    "\n",
+    "for _ in tqdm(range(300000)):\n",
+    "    outcome = rollout_random_opponent(q_learner=q_learner, epsilon=0.1, learning_rate=0.05, agent_is_first_player=True)\n",
+    "    outcomes[outcome] += 1\n",
+    "\n",
+    "print(outcomes)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "23c57538",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 300000/300000 [00:27<00:00, 11075.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<GameState.FIRST_PLAYER_WON: 1>: 75273, <GameState.SECOND_PLAYER_WON: 2>: 159803, <GameState.TIED: 3>: 64924}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# q learner is second player\n",
+    "\n",
+    "outcomes = {GameState.FIRST_PLAYER_WON: 0, GameState.SECOND_PLAYER_WON: 0, GameState.TIED: 0}\n",
+    "\n",
+    "for _ in tqdm(range(300000)):\n",
+    "    outcome = rollout_random_opponent(q_learner=q_learner, epsilon=0.1, learning_rate=0.05, agent_is_first_player=False)\n",
+    "    outcomes[outcome] += 1\n",
+    "\n",
+    "print(outcomes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "188ee2b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import time_ns\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# TODO: update to use properties from q learner\n",
+    "def save(q_learner: QLearner):\n",
+    "    dir = Path(\"./outputs\") / f\"{time_ns()}\"\n",
+    "    dir.mkdir(parents=True)\n",
+    "\n",
+    "    canonical_q_table_path: Path = dir / \"canonical_q_table.json\"\n",
+    "    print(f\"Saving to {canonical_q_table_path}\")\n",
+    "    with open(canonical_q_table_path, \"w\") as f:\n",
+    "        json.dump({\"\".join(str(x) for x in k): v for k, v in q_learner._canonical_q_table.items()}, f)\n",
+    "\n",
+    "    q_table_path: Path = dir / \"q_table.json\"\n",
+    "    print(f\"Saving to {q_table_path}\")\n",
+    "    with open(q_table_path, \"w\") as f:\n",
+    "        json.dump({\"\".join(str(x) for x in k): v for k, v in q_learner._q_table.items()}, f)\n",
+    "\n",
+    "def load(path):\n",
+    "    raw = json.load(open(path, \"r\"))\n",
+    "    return {tuple(int(c) for c in k): v for k, v in raw.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f62c31c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving to outputs/1753563724338376754/canonical_q_table.json\n",
+      "Saving to outputs/1753563724338376754/q_table.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "save(q_learner=q_learner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d27f677",
    "metadata": {},
    "outputs": [],
    "source": []
