--- a/tic-tac-toe-rl/q_learning.ipynb
+++ b/tic-tac-toe-rl/q_learning.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "6262bf0f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "f8567a5e",
    "metadata": {},
    "outputs": [],
@@ -30,12 +21,16 @@
     "from tic_tac_toe import Board, new_board, transition, next_marker_to_place, game_state, pretty_format, available_plays, GameState, Marker\n",
     "from egocentric import EgocentricBoard, EgocentricMarker, canonicalize, remap_to_egocentric_board\n",
     "from random import random, seed, choice\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "from time import time_ns\n",
+    "import json\n",
+    "from pathlib import Path\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "1f560696",
    "metadata": {},
    "outputs": [],
@@ -46,6 +41,14 @@
     "    def __init__(self):\n",
     "        self._canonical_q_table: QTable = {}\n",
     "        self._q_table: QTable = {}\n",
+    "    \n",
+    "    @property\n",
+    "    def canonical_q_table(self):\n",
+    "        return self._canonical_q_table\n",
+    "    \n",
+    "    @property\n",
+    "    def q_table(self):\n",
+    "        return self._q_table\n",
     "\n",
     "    def serialize_state_action(self, state: Board, action: int) -> tuple[str, str]:\n",
     "        \"\"\"Returns the serialized canonical state action pair and the serialized state action pair\"\"\"\n",
@@ -115,43 +118,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "6e8a3fd9",
+   "execution_count": 4,
+   "id": "4c92ef60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reward_from_board_transition(board: Board) -> float:\n",
-    "    # NOTE: if next marker is second player, then first player just played\n",
-    "    first_player: bool = next_marker_to_place(board) == Marker.SECOND_PLAYER\n",
-    "    outcome = game_state(board)\n",
-    "    if outcome == GameState.FIRST_PLAYER_WON:\n",
-    "        return 1.0 if first_player else -1.0\n",
-    "    if outcome == GameState.SECOND_PLAYER_WON:\n",
-    "        return -1.0 if first_player else 1.0\n",
-    "    return 0.0\n",
+    "def save(q_learner: QLearner):\n",
+    "    dir = Path(\"./outputs\") / f\"{time_ns()}\"\n",
+    "    dir.mkdir(parents=True)\n",
     "\n",
-    "def rollout_self_play(q_learner: QLearner, epsilon: float, learning_rate: float):\n",
-    "    board: Board = new_board()\n",
-    "    while True:\n",
-    "        action = q_learner.get_action(state_t=board, epsilon=epsilon)\n",
-    "        next_board = transition(board, action)\n",
-    "        q_learner.update(\n",
-    "            state_t=board,\n",
-    "            reward=reward_from_board_transition(board=next_board),\n",
-    "            action=action,\n",
-    "            state_t_next=next_board,\n",
-    "            learning_rate=learning_rate\n",
-    "        )\n",
-    "        board = next_board\n",
-    "        if game_state(board) != GameState.INCOMPLETE:\n",
-    "            # terminal\n",
-    "            break\n",
-    "    return game_state(board)"
+    "    canonical_q_table_path: Path = dir / \"canonical_q_table.json\"\n",
+    "    print(f\"Saving to {canonical_q_table_path}\")\n",
+    "    with open(canonical_q_table_path, \"w\") as f:\n",
+    "        json.dump({\"\".join(str(x) for x in k): v for k, v in q_learner.canonical_q_table.items()}, f)\n",
+    "\n",
+    "    q_table_path: Path = dir / \"q_table.json\"\n",
+    "    print(f\"Saving to {q_table_path}\")\n",
+    "    with open(q_table_path, \"w\") as f:\n",
+    "        json.dump({\"\".join(str(x) for x in k): v for k, v in q_learner.q_table.items()}, f)\n",
+    "\n",
+    "def load(path):\n",
+    "    raw = json.load(open(path, \"r\"))\n",
+    "    return {tuple(int(c) for c in k): v for k, v in raw.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "a6e7b7f0",
    "metadata": {},
    "outputs": [],
@@ -170,6 +163,30 @@
     "\n",
     "def random_agent_play(state_t: Board) -> Board:\n",
     "    return transition(board=state_t, idx=choice(available_plays(state_t)))\n",
+    "\n",
+    "def reward_from_board_transition(board: Board) -> float:\n",
+    "    # NOTE: if next marker is second player, then first player just played\n",
+    "    first_player: bool = next_marker_to_place(board) == Marker.SECOND_PLAYER\n",
+    "    outcome = game_state(board)\n",
+    "    if outcome == GameState.FIRST_PLAYER_WON:\n",
+    "        return 1.0 if first_player else -1.0\n",
+    "    if outcome == GameState.SECOND_PLAYER_WON:\n",
+    "        return -1.0 if first_player else 1.0\n",
+    "    return 0.0\n",
+    "\n",
+    "def rollout_self_play(q_learner: QLearner, epsilon: float, learning_rate: float):\n",
+    "    board: Board = new_board()\n",
+    "    while True:\n",
+    "        board = q_learner_play(\n",
+    "            q_learner=q_learner,\n",
+    "            state_t=board,\n",
+    "            epsilon=epsilon,\n",
+    "            learning_rate=learning_rate\n",
+    "        )\n",
+    "        if game_state(board) != GameState.INCOMPLETE:\n",
+    "            # terminal\n",
+    "            break\n",
+    "    return game_state(board)\n",
     "\n",
     "def rollout_random_opponent(\n",
     "    q_learner: QLearner,\n",
@@ -205,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "306b6d1e",
    "metadata": {},
    "outputs": [],
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "e9272820",
    "metadata": {},
    "outputs": [
@@ -224,21 +241,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/3000000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3000000/3000000 [09:02<00:00, 5530.41it/s]"
+      "100%|██████████| 5000000/5000000 [15:28<00:00, 5383.81it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{<GameState.FIRST_PLAYER_WON: 1>: 1857015, <GameState.SECOND_PLAYER_WON: 2>: 911302, <GameState.TIED: 3>: 231683}\n"
+      "{<GameState.FIRST_PLAYER_WON: 1>: 3375366, <GameState.SECOND_PLAYER_WON: 2>: 1212047, <GameState.TIED: 3>: 412587}\n"
      ]
     },
     {
@@ -252,7 +262,7 @@
    "source": [
     "outcomes = {GameState.FIRST_PLAYER_WON: 0, GameState.SECOND_PLAYER_WON: 0, GameState.TIED: 0}\n",
     "\n",
-    "for _ in tqdm(range(3000000)):\n",
+    "for _ in tqdm(range(5000000)):\n",
     "    outcome = rollout_self_play(q_learner=q_learner, epsilon=0.1, learning_rate=0.05)\n",
     "    outcomes[outcome] += 1\n",
     "\n",
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9c2687f8",
    "metadata": {},
    "outputs": [
@@ -269,21 +279,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/300000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 300000/300000 [00:31<00:00, 9432.10it/s]"
+      "100%|██████████| 5000000/5000000 [09:00<00:00, 9247.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{<GameState.FIRST_PLAYER_WON: 1>: 211602, <GameState.SECOND_PLAYER_WON: 2>: 37338, <GameState.TIED: 3>: 51060}\n"
+      "{<GameState.FIRST_PLAYER_WON: 1>: 3837175, <GameState.SECOND_PLAYER_WON: 2>: 517016, <GameState.TIED: 3>: 645809}\n"
      ]
     },
     {
@@ -299,7 +302,7 @@
     "\n",
     "outcomes = {GameState.FIRST_PLAYER_WON: 0, GameState.SECOND_PLAYER_WON: 0, GameState.TIED: 0}\n",
     "\n",
-    "for _ in tqdm(range(300000)):\n",
+    "for _ in tqdm(range(5000000)):\n",
     "    outcome = rollout_random_opponent(q_learner=q_learner, epsilon=0.1, learning_rate=0.05, agent_is_first_player=True)\n",
     "    outcomes[outcome] += 1\n",
     "\n",
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "23c57538",
    "metadata": {},
    "outputs": [
@@ -316,14 +319,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300000/300000 [00:27<00:00, 11075.00it/s]"
+      "100%|██████████| 5000000/5000000 [07:33<00:00, 11013.66it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{<GameState.FIRST_PLAYER_WON: 1>: 75273, <GameState.SECOND_PLAYER_WON: 2>: 159803, <GameState.TIED: 3>: 64924}\n"
+      "{<GameState.FIRST_PLAYER_WON: 1>: 1190328, <GameState.SECOND_PLAYER_WON: 2>: 2827542, <GameState.TIED: 3>: 982130}\n"
      ]
     },
     {
@@ -339,7 +342,7 @@
     "\n",
     "outcomes = {GameState.FIRST_PLAYER_WON: 0, GameState.SECOND_PLAYER_WON: 0, GameState.TIED: 0}\n",
     "\n",
-    "for _ in tqdm(range(300000)):\n",
+    "for _ in tqdm(range(5000000)):\n",
     "    outcome = rollout_random_opponent(q_learner=q_learner, epsilon=0.1, learning_rate=0.05, agent_is_first_player=False)\n",
     "    outcomes[outcome] += 1\n",
     "\n",
@@ -348,38 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "188ee2b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from time import time_ns\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# TODO: update to use properties from q learner\n",
-    "def save(q_learner: QLearner):\n",
-    "    dir = Path(\"./outputs\") / f\"{time_ns()}\"\n",
-    "    dir.mkdir(parents=True)\n",
-    "\n",
-    "    canonical_q_table_path: Path = dir / \"canonical_q_table.json\"\n",
-    "    print(f\"Saving to {canonical_q_table_path}\")\n",
-    "    with open(canonical_q_table_path, \"w\") as f:\n",
-    "        json.dump({\"\".join(str(x) for x in k): v for k, v in q_learner._canonical_q_table.items()}, f)\n",
-    "\n",
-    "    q_table_path: Path = dir / \"q_table.json\"\n",
-    "    print(f\"Saving to {q_table_path}\")\n",
-    "    with open(q_table_path, \"w\") as f:\n",
-    "        json.dump({\"\".join(str(x) for x in k): v for k, v in q_learner._q_table.items()}, f)\n",
-    "\n",
-    "def load(path):\n",
-    "    raw = json.load(open(path, \"r\"))\n",
-    "    return {tuple(int(c) for c in k): v for k, v in raw.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "f62c31c9",
    "metadata": {},
    "outputs": [
@@ -387,8 +359,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving to outputs/1753563724338376754/canonical_q_table.json\n",
-      "Saving to outputs/1753563724338376754/q_table.json\n"
+      "Saving to outputs/1753565858454676581/canonical_q_table.json\n",
+      "Saving to outputs/1753565858454676581/q_table.json\n"
      ]
     }
    ],
