--- a/tic-tac-toe-rl/training_analysis.ipynb
+++ b/tic-tac-toe-rl/training_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "b6240e45",
    "metadata": {},
    "outputs": [],
@@ -16,21 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "cb591484",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_dir = Path(\"./outputs/1753570246015347084/\")\n",
+    "training_dir = Path(\"./outputs/1753571632527341964\")\n",
     "td_error_path = training_dir / \"td_error.json\"\n",
+    "rewards_path = training_dir / \"rewards.json\"\n",
     "outcomes_path = training_dir / \"outcomes.json\"\n",
     "td_errors = np.array(json.load(open(td_error_path, \"r\")))\n",
+    "rewards = np.array(json.load(open(rewards_path, \"r\")))\n",
     "outcomes = np.array(json.load(open(outcomes_path, \"r\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3756af5c",
    "metadata": {},
    "outputs": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "6a150110",
    "metadata": {},
    "outputs": [],
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "4e54cee0",
    "metadata": {},
    "outputs": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6c773f55",
    "metadata": {},
    "outputs": [
@@ -132,7 +134,10 @@
    "id": "9231ce17",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(get_moving_window_average(rewards, window_size=1000))\n",
+    "plt.title(\"rewards moving window average\")"
+   ]
   }
  ],
  "metadata": {
